--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ android {
     }
 }
 
+repositories { flatDir { dirs 'libs' } }
+
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -43,4 +45,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     //implementation 'com.github.fondesa:kpermissions:3.2.1'
     implementation group: 'androidx.preference', name: 'preference', version: '1.1.0'
+    //全局异常捕捉
+    implementation(name: 'appcrashhandler-release', ext: 'aar')
 }
