[优化]文件压缩忽略防止部分系统上读取错误

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,12 @@ android {
                     }
             }
     }
+
+    aaptOptions {
+        noCompress "ogg"
+        noCompress "mp3"
+        noCompress "mp4"
+    }
 }
 
 repositories { flatDir { dirs 'libs' } }
