--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
+/.idea
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+*.apk
+/app/proguard
+dict.txt
+/app/release
