--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.su.sharkmanfunc">
+    package="com.su.charging">
 
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -10,27 +10,28 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
-        android:name=".App"
+        android:name="com.su.charging.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_2"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_2_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SharkManFunc">
+        android:theme="@style/Theme.Charging">
+
         <service
-            android:name=".SharkManChargeService"
+            android:name="com.su.charging.ChargingService"
             android:enabled="true"
             android:exported="false" />
 
         <activity
-            android:name=".ChargeActivity"
+            android:name="com.su.charging.view.activity.ChargeActivity"
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Charge" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.su.charging.view.activity.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +41,7 @@
         </activity>
 
         <receiver
-            android:name=".BootBroadcastReceiver"
+            android:name="com.su.charging.receiver.BootBroadcastReceiver"
             android:exported="true">
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
